--- a/css/syle.css
+++ b/css/syle.css
@@ -8,3 +8,9 @@ html, body{
     height: 100%;
     background-color: aqua;
 }
+
+.artigo1 {
+    width: 100%;
+    padding: 0;
+    background-color: grey;
+}
