--- a/css/syle.css
+++ b/css/syle.css
@@ -14,3 +14,9 @@ html, body{
     padding: 0;
     background-color: grey;
 }
+
+.artigo2 {
+    width: 100%;
+    margin-top: 30px;
+    background-color: rgb(65, 59, 59);
+}
