--- a/css/syle.css
+++ b/css/syle.css
@@ -20,3 +20,10 @@ html, body{
     margin-top: 30px;
     background-color: rgb(65, 59, 59);
 }
+
+.box{
+    width: 500px;
+    height: 500px;
+    margin: 0 auto;
+    background-color: #ccc;
+}
