--- a/css/syle.css
+++ b/css/syle.css
@@ -22,8 +22,6 @@ html, body{
 }
 
 .box{
-    width: 500px;
-    height: 500px;
-    margin: 0 auto;
+    padding: 20px;
     background-color: #ccc;
 }
